# 285191U013-IPFCE-assignment-3

./: CMakeLists.txt  Makefile  README.md
include/: countfib.h  doubleSum.h  fib.h  gprime.h  mod.h  numOfFib.h  numberofpairs.h  numberofparis.h  sum.h
src/: countfib.c  doubleSum.c  exercise-5.c  fib.c  gprime.c  largestPrime.c  mod.c  numOfFib.c  numberofpairs.c  playground.c  sum.c
tests/: tests.cpp
tests/src/: tests.cpp
